# ArduinoCoreCore-api

./: .gitignore  CMakeLists.txt  README.md
api/: CMakeLists.txt  Common.cpp  Common.h  HardwareSerial.cpp  HardwareSerial0.cpp  HardwareSerial1.cpp  HardwareSerial2.cpp  HardwareSerial3.cpp  Print.cpp  Print.h  Print_std.h  Stream.h  USBAPI.h  USBCore.cpp  main.cpp
api_old/: Printable.h
devel/: CMakeLists.txt  String_helpers.h  dtest_main.cpp  new_Print.h  new_Printable.h  new_Stream.h  new_String.h  new_WString.h  new_time.h  test1.cpp  test2.cpp
hostapi/: ArduinoAPI.h  CMakeLists.txt  Common.cpp  Common.h  IPAddress.cpp  IPAddress.h  Print.cpp  Print.h  Print_ostream.h  Print_std.h  Print_stdostream.h  Printable.cpp  Printable.h  Stream.cpp  Stream.h  Stream.xcppx  Stream_std.h  Stream_stdstream.h  StringHelpers.h  WCharacter.h  WString.cpp  WString.h
hostdoctest/: CMakeLists.txt
hostdoctest/src/String/: test_String.cpp  test_StringHelpers.cpp
hosttest/: CMakeLists.txt
hosttest/src/: main.cpp
hosttest/src/Common/: test_makeWord.cpp  test_map.cpp  test_max.cpp  test_min.cpp
hosttest/src/IPAddress/: test_printTo.cpp
hosttest/src/Print/: PrintMocks.h  PrintableInt.h  test_availableForWrite.cpp  test_clearWriteError.cpp  test_getWriteError.cpp  test_print.cpp  test_println.cpp
hosttest/src/Stream/: StreamMocks.h  test_find.cpp  test_findUntil.cpp  test_parseFloat.cpp  test_parseInt.cpp  test_readBytes.cpp  test_readBytesUntil.cpp  test_readString.cpp  test_readStringUntil.cpp  test_setTimeout.cpp
hosttest/src/String/: test_String.cpp  test_characterAccessFunc.cpp  test_compareTo.cpp  test_comparisonFunc.cpp  test_concat.cpp  test_indexOf.cpp  test_length.cpp  test_move.cpp  test_operators.cpp  test_replace.cpp  test_toDouble.cpp  test_toFloat.cpp
hosttest/work/: work1.cpp
test/: CMakeLists.txt
test/src/Common/: test_max.cpp  test_min.cpp
test/src/IPAddress/: test_fromString.cpp
test/src/Print/: PrintableInt.h  test_availableForWrite.cpp  test_clearWriteError.cpp  test_println.cpp
test/src/Stream/: StreamMocks.h  test_findUntil.cpp  test_getTimeout.cpp  test_parseInt.cpp
test/src/String/: test_StringHelpers.cpp  test_concat.cpp  test_lastIndexOf.cpp  test_operators.cpp  test_remove.cpp  test_substring.cpp  test_toInt.cpp  test_toLowerCase.cpp  test_toUpperCase.cpp  test_trim.cpp
test/work/: work1.cpp
